--- a/index.html
+++ b/index.html
@@ -12,14 +12,24 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body class="container-fluid">
-      <h1>Example</h1>
+      <h1>State capitals</h1>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.</p>
+      <p>Click below to start</p>
+
+      <button type="button" id="start-game-button">Guess a Capital!</button>
+
+      <p id="gameMessage"></p>
+
+          <form>
+            Add your guess <input type=”text” id=”userGuess”>
+            <input type="submit" value="Submit">
+          </form>
+
+
+
+
+
+
+
     </body>
 </html>
