testing form hide

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <p id="gameMessage"></p>
 
-          <form>
+          <form class="form hidden">
             Add your guess <input type=”text” id=”userGuess”>
             <input type="submit" value="Submit">
           </form>
