Added state to guess to display

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>Capital Game</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -12,15 +12,16 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body class="container-fluid">
-      <h1>State capitals</h1>
+      <h1>What's that Cap</h1>
 
-      <p>Click below to start</p>
+      <!-- <p>Click below to start</p> -->
 
-      <button type="button" id="start-game-button">Guess a Capital!</button>
+      <button type="button btn" id="start-game-button">Start Game!</button>
+      <p></p>
 
       <p id="gameMessage"></p>
 
-          <form class="form hidden">
+          <form class="answer-box">
             Add your guess <input type=”text” id=”userGuess”>
             <input type="submit" value="Submit">
           </form>
