Adds basic game functionality and styling

--- a/index.html
+++ b/index.html
@@ -12,24 +12,22 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body class="container-fluid">
-      <h1>What's that Cap</h1>
+      <p></p><!-- <nav>"Where a nav bar would go"</nav> -->
+      <h1>What's that Cap?</h1>
 
       <!-- <p>Click below to start</p> -->
 
-      <button type="button btn" id="start-game-button">Start Game!</button>
+      <button type="button" id="start-game-button">Start Game!</button>
       <p></p>
 
       <p id="gameMessage"></p>
 
           <form class="answer-box">
-            Add your guess <input type=”text” id=”userGuess”>
+             <input type=”text” name="answer" id=”userGuess” placeholder="Add your guess">
             <input type="submit" value="Submit">
           </form>
 
-
-
-
-
+      <p id="WinOrLoseMessage"></p>
 
 
     </body>
