Turned autocomplete off

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <p id="gameMessage"></p>
 
           <form class="answer-box">
-             <input type=”text” name="answer" id=”userGuess” placeholder="Add your guess">
+             <input type=”text” name="answer" id=”userGuess” placeholder="Add your guess" autocomplete="off">
             <input type="submit" value="Submit">
           </form>
 
